--- a/wei/app/build.gradle
+++ b/wei/app/build.gradle
@@ -26,5 +26,6 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile project(':smssdk')
     compile project(':listview')
+    compile project(':zxing')
 }
 
