--- a/wei/app/src/main/AndroidManifest.xml
+++ b/wei/app/src/main/AndroidManifest.xml
@@ -43,6 +43,9 @@
     <uses-permission android:name="com.android.launcher.permission.UNINSTALL_SHORTCUT" />
     <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />
     <uses-permission android:name="com.android.launcher.permission.WRITE_SETTINGS" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
 
     <application
         android:allowBackup="true"
@@ -73,6 +76,12 @@
         <provider
             android:authorities="com.emample.door.provider"
             android:name="door.DoorProvider"></provider>
+
+        <activity
+            android:name="com.google.zxing.client.android.ScanQRActivity"
+            android:screenOrientation="portrait"
+            />
+
     </application>
 
 </manifest>
