--- a/wei/app/src/main/AndroidManifest.xml
+++ b/wei/app/src/main/AndroidManifest.xml
@@ -57,7 +57,7 @@
         android:theme="@style/AppTheme" >
 
         <activity
-            android:name="test.Test"
+            android:name="light.LightActivity"
             android:label="@string/app_name"
             android:theme="@style/ActivityTheme_Light" >
             <intent-filter>
