--- a/wei/app/src/main/AndroidManifest.xml
+++ b/wei/app/src/main/AndroidManifest.xml
@@ -55,7 +55,7 @@
         android:hardwareAccelerated="false"
         android:theme="@style/AppTheme" >
         <activity
-        android:name="activity.LoginActivity"
+        android:name="activity.MainFragmentActivity"
             android:label="@string/app_name"
             android:theme="@style/ActivityTheme_Light" >
 
@@ -71,9 +71,9 @@
             ></activity>
 
         <!-- MainFragmentActivity -->
-        <activity android:name="activity.MainFragmentActivity"
-            android:theme="@style/ActivityTheme_Light">
-        </activity>
+        <!--<activity android:name="activity.MainFragmentActivity"-->
+            <!--android:theme="@style/ActivityTheme_Light">-->
+        <!--</activity>-->
 
         <activity android:name="fragment.FirstFragment"
             >
@@ -85,58 +85,6 @@
 
         <activity android:name="fragment.ThredFragment"
             >
-        </activity>
-
-        <!--会话界面-->
-        <activity
-            android:name="RongFragment.ConversationActivity"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden|adjustResize">
-
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-
-                <data
-                    android:host="com.example.administrator.bao"
-                    android:pathPrefix="/conversation/"
-                    android:scheme="rong" />
-            </intent-filter>
-        </activity>
-
-        <!--会话列表-->
-        <activity
-            android:name="RongFragment.ConversationListActivity"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden|adjustResize">
-
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <data
-                    android:host="com.example.administrator.bao"
-                    android:pathPrefix="/conversationlist"
-                    android:scheme="rong" />
-            </intent-filter>
-        </activity>
-
-        <!--聚合会话列表-->
-        <activity
-            android:name="RongFragment.SubConverstaionActivity"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden|adjustResize">
-
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-
-                <data
-                    android:host="com.example.administrator.bao"
-                    android:pathPrefix="/subconversationlist"
-                    android:scheme="rong" />
-            </intent-filter>
         </activity>
 
 
