--- a/wei/app/build.gradle
+++ b/wei/app/build.gradle
@@ -4,6 +4,7 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
 
+
     defaultConfig {
         applicationId "com.example.administrator.bao"
         minSdkVersion 16
@@ -27,5 +28,8 @@ dependencies {
     compile project(':smssdk')
     compile project(':listview')
     compile project(':zxing')
+    compile files('libs/BaiduLBS_Android.jar')
+    compile files('libs/httpmime-4.1.2.jar')
+    compile files('IndoorscapeAlbunPlugin.jar')
 }
 
